--- a/my-project/package.json
+++ b/my-project/package.json
@@ -16,6 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-scroll": "^1.9.0",
     "typewriter-effect": "^2.21.0"
   },
