--- a/my-project/package.json
+++ b/my-project/package.json
@@ -18,6 +18,7 @@
     "react-error-boundary": "^5.0.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.9.5",
     "react-scroll": "^1.9.0",
     "typewriter-effect": "^2.21.0"
   },
